--- a/Pj4/Pj4_long.ipynb
+++ b/Pj4/Pj4_long.ipynb
@@ -30,6 +30,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#############\n",
+    "### Problem 1"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 64,
    "metadata": {},
    "outputs": [],
@@ -171,6 +181,50 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Nonparametric Bootstrap\n",
+    "# import bootstrapped.bootstrap as bs\n",
+    "# import bootstrapped.stats_functions as bs_stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def pearsonr_ci(x,y,confidence=0.95):\n",
+    "#     ''' calculate Pearson correlation along with the confidence interval using scipy and numpy\n",
+    "#     Parameters\n",
+    "#     ----------\n",
+    "#     x, y : iterable object such as a list or np.array\n",
+    "#       Input for correlation calculation\n",
+    "#     alpha : float\n",
+    "#       Significance level. 0.05 by default\n",
+    "#     Returns\n",
+    "#     -------\n",
+    "#     r : float\n",
+    "#       Pearson's correlation coefficient\n",
+    "#     pval : float\n",
+    "#       The corresponding p value\n",
+    "#     lo, hi : float\n",
+    "#       The lower and upper bound of confidence intervals\n",
+    "#     '''\n",
+    "#     alpha = 1 - confidence\n",
+    "#     r, p = stats.pearsonr(x,y)\n",
+    "#     r_z = np.arctanh(r)\n",
+    "#     se = 1/np.sqrt(x.size-3)\n",
+    "#     z = stats.norm.ppf(1-alpha/2)\n",
+    "#     lo_z, hi_z = r_z-z*se, r_z+z*se\n",
+    "#     lo, hi = np.tanh((lo_z, hi_z))\n",
+    "#     print(\"Pearson's correlation coefficient is %f, p-value is %f, lower bound is %f, upper bound is %f\" %(r, p, lo, hi))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -255,7 +309,12 @@
    "source": [
     "volt_loc = volt.loc[volt[\"location\"] == 1]\n",
     "volt_rem = volt.loc[volt[\"location\"] == 0]\n",
-    "print(\"sample number of LOCAL is %d and sample number of REMOTE is %d\" %(len(volt_loc), len(volt_rem)))"
+    "print(\"sample number of LOCAL is %d and sample number of REMOTE is %d\" %(len(volt_loc), len(volt_rem)))\n",
+    "# plt.scatter(volt_loc[],volt_loc['locat'])\n",
+    "# plt.title(\"title\")\n",
+    "# plt.xlabel(\"x-label\")\n",
+    "# plt.ylabel(\"y-label\")\n",
+    "# plt.show()"
    ]
   },
   {
@@ -355,10 +414,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 77,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## Q3"
+    "#############\n",
+    "### Problem 3"
    ]
   },
   {
